# senseless_soccer

./: .directory  CMakeLists.txt  config.sh  mac_config.sh  senseless_soccer.files  senseless_soccer.includes  senseless_soccer.kdev4  win_cnfig.bat
.kdev4/: senseless_soccer.kdev4
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
data/: DEEP_CENTER_ATTACKER.pos  GOALKEEPER_POSITIONS.pos  LEFT_BACK_POSITIONS.pos  LEFT_CENTER_ATTACKER_POSITIONS.pos  LEFT_CENTER_BACK_POSITIONS.pos  LEFT_CENTER_MIDFIELDER_POSITIONS.pos  LEFT_MIDFIELDER_POSITIONS.pos  RIGHT_BACK_POSITIONS.pos  RIGHT_CENTER_ATTACKER_POSITIONS.pos  RIGHT_CENTER_BACK_POSITIONS.pos  RIGHT_CENTER_MIDFIELDER_POSITIONS.pos  RIGHT_MIDFIELDER_POSITIONS.pos
docs/: roadmap  roadmap.txt
gfx/: gfx
src/: .directory  .main.cpp.kate-swp  globals.cpp  globals.h  main.cpp  senseless_soccer.files  senseless_soccer.includes
src/ball/: ball.cpp  ball.h
src/game/: game.cpp  game.h
src/graphics/: ball_sprite.cpp  ball_sprite.h  pitch.cpp  pitch.h  pitch_renderable.cpp  pitch_renderable.cpp.autosave  pitch_renderable.h  player_sprite.cpp  player_sprite.h
src/input/: controller.cpp  controller.h  controller_simulator.cpp  controller_simulator.h  controlleractionclearance.cpp  controlleractionclearance.h  sensi_controller.cpp  sensi_controller.h  sensi_controller_emulator.cpp  sensi_controller_emulator.h
src/input/cpu/: controller_simulator.cpp  controller_simulator.h
src/input/cpu/simulated_actions/: .directory  simulate_clearance.cpp  simulate_clearance.h  simulate_nothing.cpp  simulate_nothing.h  simulated_action.cpp  simulated_action.h  simulated_sequence.cpp  simulated_sequence.h
src/input/p1/: controller.cpp  controller.h
src/input/simulated_actions/: simulate_clearance.cpp  simulate_clearance.h  simulated_action.cpp  simulated_action.h
src/joysticker/: controller.cpp  controller.cpp.autosave  controller.h
src/joysticker/cpu/: .directory  controller_simulator.cpp  controller_simulator.h
src/joysticker/cpu/simulated_actions/: simulate_clearance.cpp  simulate_clearance.h  simulate_nothing.cpp  simulate_nothing.cpp.autosave  simulate_nothing.h  simulate_nothing.h.autosave  simulated_sequence.cpp  simulated_sequence.h
src/kit/: kit_factory.cpp  kit_factory.h  kit_factory.h.autosave
src/match/: match.cpp  match.h
src/match/match_states/: match_state.cpp  match_state.h  state_play.cpp  state_play.h
src/metrics/: metrics.cpp  metrics.h
src/pitch/: pitch.cpp  pitch.h
src/player/: .directory  .player.cpp.kate-swp  .player.h.kate-swp  player.cpp  player.h  player_factory.cpp  player_factory.h
src/player/brain/: .directory  brain.cpp  brain.h  brainstate.cpp  brainstate.h  brainstate_dribble.cpp  brainstate_dribble.h  brainstate_getball.cpp  brainstate_getball.h  brainstate_idle.h  dribble.cpp  dribble.h
src/player/brain/brainstates/: .directory  brainstate.cpp  brainstate.h  brainstate_clear.cpp  brainstate_clear.h  brainstate_cover.cpp  brainstate_cover.h  brainstate_dribble.cpp  brainstate_dribble.h  brainstate_getball.cpp  brainstate_getball.h  brainstate_idle.cpp  brainstate_idle.h  brainstate_pass.cpp  brainstate_pass.h  brainstate_press.cpp  brainstate_press.h  brainstate_receive.cpp  brainstate_receive.h  brainstate_shoot.cpp  brainstate_shoot.h  brainstate_support.cpp  brainstate_support.h
src/player/locomotion/: .locomotion_manager.cpp.kate-swp  arrive.cpp  arrive.h  cover.cpp  cover.h  head.cpp  head.h  intercept.cpp  intercept.cpp.autosave  intercept.h  locomotion.cpp  locomotion.h  locomotion_manager.cpp  locomotion_manager.h  pursue.cpp  pursue.h
src/player/player_states/: player_state.cpp  player_state.h  running.cpp  running.cpp.autosave  running.h  sliding.cpp  sliding.cpp.autosave  sliding.h  standing.cpp  standing.h
src/team/: team.cpp  team.h
src/team/roles/: role.cpp  role.h
src/team/team_states/: team_play.cpp  team_play.h  team_state.cpp  team_state.h
